--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ composeMultiplatform = "1.8.2"
 junit = "4.13.2"
 kotlin = "2.2.0"
 googleSignIn = "21.3.0"
+credentialManager = "1.3.0"
+googleIdentityServices = "1.1.1"
 androidx-datastore = "1.1.1"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.8.0"
@@ -33,6 +35,9 @@ androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:life
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
 google-signin = { module = "com.google.android.gms:play-services-auth", version.ref = "googleSignIn" }
+androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentialManager" }
+androidx-credentials-play-services = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialManager" }
+google-identity-services = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleIdentityServices" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
