--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ kotlin = "2.2.0"
 googleSignIn = "21.3.0"
 credentialManager = "1.3.0"
 googleIdentityServices = "1.1.1"
-androidx-datastore = "1.1.1"
+androidx-security = "1.1.0-alpha06"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.8.0"
 kotlinx-datetime = "0.6.1"
@@ -43,7 +43,7 @@ androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayo
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore" }
+androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "androidx-security" }
 google-signin = { module = "com.google.android.gms:play-services-auth", version.ref = "googleSignIn" }
 androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentialManager" }
 androidx-credentials-play-services = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialManager" }
